# codegen_orchestrator

./: .dockerignore  .env.example  .env.test  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.tools.yml  docker-compose.yml  orca.yaml  pyproject.toml  ruff.toml  secrets.yaml  test_api_endpoints.sh  test_provisioner.py  test_user_propagation.py  workspace.toml
services/api/: Dockerfile  Dockerfile.test  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini
services/api/migrations/: env.py
services/api/src/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py
services/api/tests/: __init__.py
services/infra-service/: Dockerfile  Dockerfile.test  entrypoint.sh  pyproject.toml
services/infra-service/ansible/: requirements.yml
services/infra-service/src/: main.py
services/infra-service/tests/: conftest.py
services/langgraph/: Dockerfile  Dockerfile.test  pyproject.toml  pytest.ini  test_openrouter.py
services/langgraph/src/: __init__.py  __main__.py  allocations.py  events.py  graph.py  list_repos.py  main.py  provisioner.py  redis_publisher.py  runtime_identity.py  schemas.py  session_manager.py  test_llm_factory_inline.py  test_openrouter_inline.py  test_zavhoz.py  thread_manager.py  tracing.py  verify_provisioner.py  worker.py  worker_events.py
services/langgraph/tests/: __init__.py  conftest.py  test_context_enrichment.py
services/scaffolder/: Dockerfile  Dockerfile.test  pyproject.toml  pytest.ini
services/scaffolder/src/: config.py  consumer.py  main.py  scaffold.py  spec_extractor.py  validation.py
services/scaffolder/tests/: conftest.py
services/scheduler/: Dockerfile  Dockerfile.test  pyproject.toml  pytest.ini
services/scheduler/src/: __init__.py  config.py  db.py  main.py  startup.py
services/scheduler/tests/: __init__.py  conftest.py
services/telegram_bot/: Dockerfile  Dockerfile.test  pyproject.toml  pytest.ini
services/telegram_bot/src/: agent_manager.py  config.py  handlers.py  keyboards.py  main.py  middleware.py  notifications.py
services/telegram_bot/tests/: __init__.py
services/worker-manager/: Dockerfile  Dockerfile.test  pyproject.toml
services/worker-manager/src/: codex_auth.py  compose_runner.py  compose_validator.py  config.py  consumer.py  container_config.py  docker_ops.py  events.py  garbage_collector.py  git_ops.py  image_builder.py  main.py  manager.py  scaffold_phase.py  workspace.py
services/workers-spawner/: Dockerfile  Dockerfile.test  conftest.py  pyproject.toml
services/workers-spawner/tests/: __init__.py  test_agent_factory_interface.py  test_config_parser.py  test_factories.py  test_process_manager.py  test_session_manager.py
shared/: __init__.py  config.py  config_store.py  constants.py  crypto.py  diagnostics.py  live_harness_cleanup.py  live_harness_remote_cleanup.sh  logging_config.py  notifications.py  project_slug.py  pyproject.toml  queues.py  redis_client.py
shared/cli/: Dockerfile.test  pyproject.toml
shared/cli/tests/: test_commands.py  test_respond.py
shared/cli/tests_legacy/: test_models.py  test_validation.py
shared/clients/: __init__.py  embedding.py  github.py  infra_client.py  loki.py  time4vps.py
shared/clients/github/: __init__.py  _actions.py  _base.py  _provisioning.py  _pull_requests.py  _repos.py  _secrets.py
shared/contracts/: acceptance.py  base.py  env_contract.py  env_usage.py  events.py  git_ref.py  pyproject.toml  runtime_project.py  service_ports.py  template.py  vocab.py
shared/contracts/dto/: agent_config.py  allocation.py  analytics.py  api_key.py  application.py  base.py  brainstorm.py  deployment.py  engineering.py  incident.py  milestone.py  project.py  repository.py  run.py  run_result.py  server.py  service_deployment.py  story.py  task.py  task_execution.py  user.py  work_item.py  worker.py
shared/contracts/queues/: __init__.py  architect.py  deploy.py  developer_worker.py  engineering.py  po.py  po_worker.py  provisioner.py  qa.py  scaffold.py  scaffolder.py  worker.py  worker_lifecycle.py  worker_result.py  workflow.py
shared/contracts/schemas/: env-contract.schema.json
shared/log_config/: __init__.py  config.py  correlation.py  pyproject.toml
shared/logging/: pyproject.toml
shared/models/: __init__.py  agent_config.py  analytics_daily.py  analytics_hourly.py  analytics_known_users.py  api_key.py  application.py  application_health_history.py  base.py  brainstorm.py  cli_agent_config.py  deployment.py  domain.py  incident.py  milestone.py  port_allocation.py  project.py  rag.py  repository.py  run.py  server.py  server_metrics_history.py  service_deployment.py  story.py  system_config.py  task.py  work_item.py
shared/prompts/: po_agent.yml
shared/prompts/developer_worker/: INSTRUCTIONS.md
shared/prompts/po_worker/: INSTRUCTIONS.md
shared/redis/: __init__.py  client.py  pyproject.toml
shared/redis/tests_legacy/: fake.py
shared/schemas/: __init__.py  deployment_jobs.py  github.py  modules.py  project_spec.py  time4vps.py  tool_groups.py  tool_registry.py  worker_events.py
shared/tests/: __init__.py  test_acceptance.py  test_brainstorm_dto.py  test_brainstorm_model.py  test_constants.py  test_correlation.py  test_crypto.py  test_deploy_contracts.py  test_engineering_contract.py  test_engineering_status_enum.py  test_log_config.py  test_logging_config.py  test_milestone_dto.py  test_milestone_model.py  test_mock_github.py  test_notifications.py  test_po_contracts.py  test_queues.py  test_redis_client.py  test_tool_registry.py  test_worker_contracts.py  test_worker_result_contract.py
shared/tests/clients/: test_github.py  test_infra_client.py
shared/tests/mocks/: github.py
shared/tests/unit/: test_analytics_models.py  test_application_dto.py  test_codex_deployment_contract.py  test_config_store.py  test_env_contract.py  test_env_usage.py  test_github_actions_evidence.py  test_incident_dto.py  test_live_harness_cleanup.py  test_loki_client.py  test_qa_contract.py  (+18 more)
(+1429 files in other folders)
