[project]
name = "codegen-orchestrator"
version = "0.1.0"
description = "Multi-agent orchestrator for automated project generation and deployment"
requires-python = ">=3.12"
# No runtime dependencies - each service has its own

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx",  # for TestClient
    # Install all services for testing
    "-e ./shared",
    "-e ./services/api",
    "-e ./services/langgraph",
    "-e ./services/telegram_bot",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["shared", "src"]
