[project]
name = "codegen-orchestrator"
version = "0.1.0"
description = "Multi-agent orchestrator for automated project generation and deployment"
requires-python = ">=3.12"
# No runtime dependencies - each service has its own

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.15.5",
    "mypy>=1.13.0",
    "httpx",
    "respx>=0.21.1",
    "fakeredis>=2.34.1",
    "makefun",
    "copier>=9.4.0",
    # shared/ is COPY'd in Docker (not pip-installed), but tests need it
    "shared",
    # Workspace members (all services + packages)
    "api",
    "langgraph-orchestrator",
    "telegram-bot",
    "scheduler",
    "worker-manager",
    "infra-service",
    "orchestrator-cli",
    "worker-wrapper",
]

[tool.uv.workspace]
members = [
    "services/api",
    "services/langgraph",
    "services/telegram_bot",
    "services/scheduler",
    "services/worker-manager",
    "services/infra-service",
    "packages/orchestrator-cli",
    "packages/worker-wrapper",
]

[tool.uv.sources]
shared = { path = "shared", editable = true }
codegen-orchestrator-shared-contracts = { path = "shared/contracts", editable = true }
codegen-orchestrator-shared-redis = { path = "shared/redis", editable = true }
codegen-orchestrator-shared-log-config = { path = "shared/log_config", editable = true }
api = { workspace = true }
langgraph-orchestrator = { workspace = true }
telegram-bot = { workspace = true }
scheduler = { workspace = true }
worker-manager = { workspace = true }
infra-service = { workspace = true }
orchestrator-cli = { workspace = true }
worker-wrapper = { workspace = true }

# No build-system — this is a virtual workspace root (not a distributable package)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: marks tests as end-to-end tests",
    "e2e_real: marks tests as real e2e tests (deselect with '-m \"not e2e_real\"')",
    "integration: marks tests as integration tests",
    "requires_github: marks tests requiring real GitHub credentials",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["shared", "src"]
