[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for codegen_orchestrator services"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0",
    "pgvector>=0.2.5",
    "redis[hiredis]>=5.0.0",
    "structlog>=25.1.0",
    "pynacl>=1.5.0",  # For GitHub Actions secrets encryption
    "pyyaml>=6.0",  # For loading prompt templates
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "prompts"
