[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for codegen_orchestrator services"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0",
    "pgvector>=0.2.5",
    "redis[hiredis]>=5.0.0",
    "structlog>=25.1.0",
    "pynacl>=1.5.0",  # For GitHub Actions secrets encryption
    "pyyaml>=6.0",  # For loading prompt templates
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
exclude = ["redis"]

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "shared/__init__.py"
"clients" = "shared/clients"
"config.py" = "shared/config.py"
"contracts" = "shared/contracts"
"logging" = "shared/logging"
"logging_config.py" = "shared/logging_config.py"
"models" = "shared/models"
"notifications.py" = "shared/notifications.py"
"prompts" = "shared/prompts"
"queues.py" = "shared/queues.py"
"redis" = "shared/redis"
"redis_client.py" = "shared/redis_client.py"
"schemas" = "shared/schemas"
"tests" = "shared/tests"
