[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for codegen_orchestrator services"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0.0",
    "pgvector>=0.2.5",
    "redis[hiredis]>=8.0.0",
    "structlog>=25.1.0",
    "pynacl>=1.5.0",  # For GitHub Actions secrets encryption
    "pyyaml>=6.0",  # For loading prompt templates
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=43.0.0",
]

[project.scripts]
env-contract-check = "shared.contracts.env_usage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
exclude = ["redis"]

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "shared/__init__.py"
"clients" = "shared/clients"
"config.py" = "shared/config.py"
"config_store.py" = "shared/config_store.py"
"constants.py" = "shared/constants.py"
"contracts" = "shared/contracts"
"log_config" = "shared/log_config"
"models" = "shared/models"
"notifications.py" = "shared/notifications.py"
"queues.py" = "shared/queues.py"
"redis" = "shared/redis"
"redis_client.py" = "shared/redis_client.py"
"crypto.py" = "shared/crypto.py"
"diagnostics.py" = "shared/diagnostics.py"
"schemas" = "shared/schemas"
"tests" = "shared/tests"
