[project]
name = "api"
version = "0.1.0"
description = "Central API service for codegen_orchestrator"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # HTTP client
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    
    # Redis (for pub/sub)
    "redis[hiredis]>=5.0.0",
    
    # Utils
    "structlog>=24.0.0",
    "pyjwt[crypto]>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
