[project]
name = "infra-service"
version = "0.1.0"
description = "Infrastructure worker for provisioning servers via Ansible"
requires-python = ">=3.12"
dependencies = [
    # Ansible (moved from langgraph)
    "ansible-core>=2.16.0",

    # Redis for queue consumption
    "redis[hiredis]>=5.0.0",

    # HTTP client for API calls
    "httpx>=0.27.0",

    # Logging
    "structlog>=25.1.0",

    # Settings
    "pydantic-settings>=2.0.0",

    # JWT for shared/clients
    "pyjwt[crypto]>=2.9.0",

    # Async HTTP for shared/notifications
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
