[project]
name = "langgraph-orchestrator"
version = "0.1.0"
description = "LangGraph-based multi-agent orchestrator"
requires-python = ">=3.12"
dependencies = [
    # LangGraph & LangChain
    "langgraph>=1.0.5",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",
    
    # HTTP client
    "httpx>=0.27.0",
    
    # Redis (for stream communication)
    "redis[hiredis]>=5.0.0",
    
    # Utils
    "structlog>=24.0.0",
    "pyjwt[crypto]>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
