[project]
name = "langgraph-orchestrator"
version = "0.1.0"
description = "LangGraph-based multi-agent orchestrator"
requires-python = ">=3.12"
dependencies = [
    # LangGraph & LangChain
    "langgraph>=1.0.5",
    "langchain>=1.0.0",
    "langchain-openai>=0.2.0",

    # HTTP client
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # Redis (for stream communication)
    "redis[hiredis]>=8.0.0",

    # Utils
    "structlog>=25.1.0",
    "pyjwt[crypto]>=2.9.0",
    "pydantic-settings>=2.0.0",

    # GitHub secrets encryption
    "pynacl>=1.5.0",

    # LangGraph PostgreSQL checkpointer (psycopg[binary] needed for slim images)
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",

    # Conversation summarization (SummarizationNode for context management)
    "langmem>=0.0.30",

    # Telethon for Telegram bot smoke tests (optional — graceful skip if not configured)
    "telethon>=1.36.0",

    # Web search for PO agent (DuckDuckGo, no API key needed)
    "ddgs>=7.0.0",

    # SSH for deploy pre-checks (server directory validation)
    "asyncssh>=2.14.0",

    # LLM tracing via Langfuse (LangChain callback integration)
    "langfuse>=2.0.0",

    # shared/ deps (shared is COPY'd as plain files, not pip-installed)
    "pgvector>=0.2.5",
    "pyyaml>=6.0",
    "cryptography>=43.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
