[project]
name = "scaffolder"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # HTTP client (API calls)
    "httpx>=0.27.0",
    # Redis (queue consumer)
    "redis[hiredis]>=5.0.0",
    # Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Logging
    "structlog>=25.1.0",
    # GitHub App auth
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    # GitHub Secrets API (encrypt secret values)
    "pynacl>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
