[project]
name = "scheduler"
version = "0.1.0"
description = "Background workers service - polling, health checks, sync tasks"
requires-python = ">=3.12"
dependencies = [
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    
    # HTTP client
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    
    # Redis (for pub/sub)
    "redis[hiredis]>=5.0.0",
    
    # Utils
    "structlog>=25.1.0",
    "pyjwt[crypto]>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

