[project]
name = "worker-manager"
version = "0.1.0"
description = "Service for managing worker containers"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "docker",
    "redis",
    "structlog",
    "tenacity",
    "pyyaml",

    # shared/ deps (shared is COPY'd as plain files, not pip-installed)
    "httpx>=0.27.0",
    "pynacl>=1.5.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=43.0.0",
    "pgvector>=0.2.5",
]

[tool.ruff]
line-length = 120
