[project]
name = "workers-spawner"
version = "0.1.0"
description = "Unified service for managing CLI agents in Docker containers"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pexpect>=4.9",
    "redis>=5.0",
    "structlog>=24.0",
    "pyyaml>=6.0",  # For loading prompt templates via shared
    
    # CLI dependencies (required for doc generation via import)
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "makefun>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workers_spawner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
