[project]
name = "orchestrator-cli"
version = "0.1.0"
description = "CLI for CodeGen Orchestrator Agent"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "redis>=5.0.0",
]

[project.scripts]
orchestrator = "orchestrator.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

